hphp/hack/test/typecheck/reactive/mut_collections/mut_capture2.php.exp
File "mut_capture2.php", line 13, characters 5-6:
Neither a Mutable nor MaybeMutable object may be captured by an anonymous function. (Typing[4283])
File "mut_capture2.php", line 21, characters 5-6:
Neither a Mutable nor MaybeMutable object may be captured by an anonymous function. (Typing[4283])
File "mut_capture2.php", line 29, characters 7-8:
Neither a Mutable nor MaybeMutable object may be captured by an anonymous function. (Typing[4283])
